bpo-38965: Fix stuck in test_stack_overflow tests.

After update to GCC10, the testcase is stuck and
a pragma needs to be added.